--- a/brewer/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/brewer/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -46,7 +46,7 @@
 					</div>
 					<div class="form-group  col-sm-4">
 						<label for="dataNascimento"  class="control-label">Data de nascimento</label>
-						<input type="text" class="form-control" id="dataNascimento" th:field="*{dataNascimento}">
+						<input type="text" class="form-control  js-date" id="dataNascimento" th:field="*{dataNascimento}" autocomplete="off">
 					</div>
 				</div>
 				
