--- a/brewer/src/main/resources/static/stylesheets/brewer.css
+++ b/brewer/src/main/resources/static/stylesheets/brewer.css
@@ -160,6 +160,7 @@
 /* Coluna Pesquisa de usuários */
 .table-usuarios-col-status {
 	width: 30px;
+	text-align: center;
 }
 /*
 ###############################
