--- a/brewer/src/main/resources/templates/usuario/PesquisaUsuarios.html
+++ b/brewer/src/main/resources/templates/usuario/PesquisaUsuarios.html
@@ -89,7 +89,7 @@
 				</thead>
 				
 				<tbody>
-					<tr th:each="usuario : ${usuarios}">
+					<tr th:each="usuario : ${pagina.conteudo}">
 						<td>
 	            			<div class="checkbox aw-checkbox-no-margin" th:if="${#authentication.principal.usuario.codigo != usuario.codigo}">
 	            				<input type="checkbox" class="js-selecao" data:codigo="${usuario.codigo}"/>
@@ -118,12 +118,14 @@
 							</a>
 						</td>
 					</tr>
-					<tr th:if="${usuarios.empty}">
-						<td colspan="7">Nenhum usuário encontrado</td>
+					<tr th:if="${pagina.vazia}">
+						<td colspan="6">Nenhum usuário encontrado</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
+		
+		<brewer:pagination page="${pagina}"/>
 	</div>
 
 </section>
