--- a/brewer/src/main/resources/static/stylesheets/brewer.css
+++ b/brewer/src/main/resources/static/stylesheets/brewer.css
@@ -157,18 +157,36 @@
 	text-align: right;
 }
 
-/* Coluna Pesquisa de usuários */
+/* Colunas - Pesquisa de usuários */
 .table-usuarios-col-status {
 	width: 30px;
 	text-align: center;
 }
+
+/* Tabela Cervejas página de Venda */
+.bw-tabela-cervejas {
+	margin-bottom: 15px;
+}
+
+.bw-tabela-cervejas__vazio {
+	padding: 15px 15px;
+	
+	border: 1px dashed #ddd;
+	
+	text-align: center;
+	font-size: 1.2em;
+	font-weight: 300;
+	color: #555;
+}
+
+
 /*
-###############################
-# CUSTOMIZAÇAÕ DE COMPONENTES
-###############################
+######################################
+# CUSTOMIZAÇÃO DE COMPONENTES
+######################################
 */
 
 .checkbox input[type="checkbox"]:checked + input + label::after {
-	font-family: 'FontAwesome';
-	content: "\f00c"; 
+    font-family: 'FontAwesome';
+    content: "\f00c"; 
 }
