--- a/brewer/src/main/resources/templates/venda/CadastroVenda.html
+++ b/brewer/src/main/resources/templates/venda/CadastroVenda.html
@@ -71,8 +71,6 @@
 				        </button>
 				      </span>
 				    </div>
-				    
-				    <th:block th:replace="cliente/PesquisaRapidaClientes :: pesquisaRapidaClientes"></th:block>
 				</div>
 				
 				<div class="form-group  col-sm-4 bw-required">
@@ -160,17 +158,21 @@
 			</div>
 		</form>
 	</div>
+	
+	<th:block th:replace="cliente/PesquisaRapidaClientes :: pesquisaRapidaClientes"></th:block>
 </section>
 
 <th:block layout:fragment="javascript-extra">
-<script>
-$(function() {
-	$('.js-abas-venda a').click(function (e) {
-		e.preventDefault();
-		$(this).tab('show');
-	});
-});
-</script>
+	<script th:src="@{/javascripts/vendors/handlebars.min.js}"></script>
+	<script th:src="@{/javascripts/cliente.pesquisa-rapida.js}"></script>
+	<script>
+		$(function() {
+			$('.js-abas-venda a').click(function (e) {
+				e.preventDefault();
+				$(this).tab('show');
+			});
+		});
+	</script>
 </th:block>
 
 </html>
