--- a/brewer/src/main/resources/templates/hbs/TabelaPesquisaRapidaClientes.html
+++ b/brewer/src/main/resources/templates/hbs/TabelaPesquisaRapidaClientes.html
@@ -11,7 +11,8 @@
 			<tbody>
 				{{#if .}}
 					{{#each .}}
-						<tr>
+						<tr data-codigo="{{codigo}}" data-nome="{{nome}}" 
+							class="js-cliente-pesquisa-rapida">
 							<td>{{nome}}</td>
 							<td>{{telefone}}</td>
 						</tr>
