--- a/brewer/src/main/resources/templates/venda/CadastroVenda.html
+++ b/brewer/src/main/resources/templates/venda/CadastroVenda.html
@@ -3,6 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout/LayoutPadrao}"
+	xmlns:data="http://thymeleaf.org/extras/data"
 	xmlns:brewer="http://brewer.algaworks.com">
 
 <head>
@@ -109,7 +110,8 @@
 					<div class="row">
 						<div class="form-group  col-lg-12">
 							<input type="text" class="form-control  js-sku-nome-cerveja-input" id="cerveja" 
-								placeholder="Pesquise e adicione a cerveja pelo SKU ou nome" autofocus="autofocus" />
+								placeholder="Pesquise e adicione a cerveja pelo SKU ou nome" autofocus="autofocus" 
+								data:url="@{/cervejas}"/>
 						</div>
 					</div>
 					
