--- a/brewer/src/main/resources/templates/venda/TabelaItensVenda.html
+++ b/brewer/src/main/resources/templates/venda/TabelaItensVenda.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:data="http://thymeleaf.org/extras/data">
 
 	<div class="bw-tabela-item" th:each="item : ${itens}">
 		<div class="bw-tabela-item__coluna  bw-tabela-item__coluna--foto">
@@ -15,7 +16,8 @@
 		
 		<div class="bw-tabela-item__coluna  bw-tabela-item__coluna--valores">
 			<div class="bw-tabela-cerveja-valor-pequeno">
-				<input type="text" maxlength="3" class="bw-tabela-cerveja-campo-quantidade" th:value="${item.quantidade}"/>
+				<input type="text" maxlength="3" data:codigo-cerveja="${item.cerveja.codigo}"
+					   class="bw-tabela-cerveja-campo-quantidade  js-tabela-cerveja-quantidaded-item" th:value="${item.quantidade}"/>
 				<span>x R$[[${{item.valorUnitario}}]]</span>
 			</div>
 			<div class="bw-tabela-cerveja-valor-grande">R$[[${{item.valorTotal}}]]</div>
