--- a/brewer/src/main/resources/templates/cerveja/PesquisaCervejas.html
+++ b/brewer/src/main/resources/templates/cerveja/PesquisaCervejas.html
@@ -120,10 +120,11 @@
 						<td th:text="${cerveja.origem.descricao}">Internacional</td>
 						<td class="text-right" th:text="|R$ ${cerveja.valor}|">R$ 8.00</td>
 						<td class="text-center">
-							<a class="btn  btn-link  btn-xs" title="Editar"> 
+							<a class="btn  btn-link  btn-xs  js-tooltip" title="Editar"> 
 								<i class="glyphicon glyphicon-pencil"></i>
 							</a>
-							<a class="btn  btn-link  btn-xs" title="Excluir">
+							<a class="btn  btn-link  btn-xs  js-tooltip  js-exclusao-btn" title="Excluir" href="#" 
+							data:url="@{/cervejas/{codigo}(codigo=${cerveja.codigo})}" data:codigo="${cerveja.codigo}" data:objeto="${cerveja.nome}">
 								<i class="glyphicon glyphicon-remove"></i>
 							</a>
 						</td>
