--- a/brewer/src/main/resources/templates/venda/TabelaItensVenda.html
+++ b/brewer/src/main/resources/templates/venda/TabelaItensVenda.html
@@ -17,13 +17,14 @@
 		<div class="bw-tabela-item__coluna  bw-tabela-item__coluna--valores">
 			<div class="bw-tabela-cerveja-valor-pequeno">
 				<input type="text" maxlength="3" data:codigo-cerveja="${item.cerveja.codigo}"
-					   class="bw-tabela-cerveja-campo-quantidade  js-tabela-cerveja-quantidaded-item" th:value="${item.quantidade}"/>
+					   class="bw-tabela-cerveja-campo-quantidade  js-tabela-cerveja-quantidaded-item" 
+					   th:value="${item.quantidade}" th:disabled="${venda != null ? venda.salvarProibido : false}"/>
 				<span>x R$[[${{item.valorUnitario}}]]</span>
 			</div>
 			<div class="bw-tabela-cerveja-valor-grande">R$[[${{item.valorTotal}}]]</div>
 		</div>
 		
-		<div class="bw-tabela-item__painel-exclusao">
+		<div class="bw-tabela-item__painel-exclusao" th:if="${venda != null ? venda.salvarPermitido : false}">
 			<span class="bw-tabela-item__titulo-exclusao">Excluir este item da venda?</span>
 			<button type="button" class="btn  btn-danger  js-exclusao-item-btn"
 					data:codigo-cerveja="${item.cerveja.codigo}">Sim, excluir</button>
