--- a/brewer/src/main/resources/templates/Dashboard.html
+++ b/brewer/src/main/resources/templates/Dashboard.html
@@ -25,7 +25,7 @@
 					<div class="aw-box__icon">
 						<i class="fa  fa-heartbeat  fa-3x"></i>
 					</div>
-					<div class="aw-box__value">R$90.542,59</div>
+					<div class="aw-box__value">R$[[${{situacaoEstoque.valorTotalEstoque}}]]</div>
 					<div class="aw-box__title">Valor do estoque</div>
 				</div>
 			</div>
@@ -35,7 +35,7 @@
 					<div class="aw-box__icon">
 						<i class="fa  fa-hashtag  fa-3x"></i>
 					</div>
-					<div class="aw-box__value">123</div>
+					<div class="aw-box__value">[[${{situacaoEstoque.quantidadeTotalEstoque}}]]</div>
 					<div class="aw-box__title">Itens no estoque</div>
 				</div>
 			</div>
@@ -45,7 +45,7 @@
 					<div class="aw-box__icon">
 						<i class="fa  fa-users  fa-3x"></i>
 					</div>
-					<div class="aw-box__value">9</div>
+					<div class="aw-box__value">[[${{quantidadeClientes}}]]</div>
 					<div class="aw-box__title">Total de clientes</div>
 				</div>
 			</div>
