--- a/brewer/src/main/resources/templates/venda/TabelaItensVenda.html
+++ b/brewer/src/main/resources/templates/venda/TabelaItensVenda.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:th="http://www.thymeleaf.org"
-	xmlns:data="http://thymeleaf.org/extras/data">
+	xmlns:data="http://www.thymeleaf.org/extras/data">
 
 	<div class="bw-tabela-item  js-tabela-item" th:each="item : ${itens}" data:valor-total="${valorTotal}">
 		<div class="bw-tabela-item__coluna  bw-tabela-item__coluna--foto">
@@ -9,16 +9,17 @@
 		</div>
 		
 		<div class="bw-tabela-item__coluna  bw-tabela-item__coluna--detalhes">
-			<span class="bw-tabela-cerveja-nome" th:text="${item.cerveja.nome}">Nome</span>
+			<span class="bw-tabela-cerveja-nome" th:text="${item.cerveja.nome}">Negra Modelo Long Neck 355ml</span>
 			<span class="label  label-default" th:text="${item.cerveja.sku}">AA1112</span>
-			<span class="bw-tabela-cerveja-origem" th:text="${item.cerveja.origem.descricao}">Importado</span>
+			<span class="bw-tabela-cerveja-origem" th:text="${item.cerveja.origem.descricao}">Importada</span>
 		</div>
 		
 		<div class="bw-tabela-item__coluna  bw-tabela-item__coluna--valores">
 			<div class="bw-tabela-cerveja-valor-pequeno">
-				<input type="text" maxlength="3" data:codigo-cerveja="${item.cerveja.codigo}"
-					   class="bw-tabela-cerveja-campo-quantidade  js-tabela-cerveja-quantidaded-item" 
-					   th:value="${item.quantidade}" th:disabled="${venda != null ? venda.salvarProibido : false}"/>
+				<input type="text" maxlength="3" 
+					class="bw-tabela-cerveja-campo-quantidade  js-tabela-cerveja-quantidade-item" 
+					th:value="${item.quantidade}" data:codigo-cerveja="${item.cerveja.codigo}"
+					th:disabled="${venda != null ? venda.salvarProibido : false}"/>
 				<span>x R$[[${{item.valorUnitario}}]]</span>
 			</div>
 			<div class="bw-tabela-cerveja-valor-grande">R$[[${{item.valorTotal}}]]</div>
@@ -27,7 +28,7 @@
 		<div class="bw-tabela-item__painel-exclusao" th:if="${venda != null ? venda.salvarPermitido : false}">
 			<span class="bw-tabela-item__titulo-exclusao">Excluir este item da venda?</span>
 			<button type="button" class="btn  btn-danger  js-exclusao-item-btn"
-					data:codigo-cerveja="${item.cerveja.codigo}">Sim, excluir</button>
+				data:codigo-cerveja="${item.cerveja.codigo}">Sim, excluir!</button>
 		</div>
 	</div>
 	
