--- a/brewer/src/main/resources/templates/fragments/erros/404.html
+++ b/brewer/src/main/resources/templates/fragments/erros/404.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layout/LayoutSimples}">
+	xmlns:th="http://www.thymeleaf.org">
 	
-<th:block layout:fragment="conteudo">
 	<div class="aw-error-panel">
 		<h1 class="aw-error-panel__code">
 			<i class="fa  fa-location-arrow"></i> 404
@@ -19,6 +16,4 @@
 			<a href="javascript:history.back()" class="btn  btn-primary">Voltar para onde estava</a>
 		</div>
 	</div>
-
-</th:block>
 </html>
